# Library-Management-System

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Database.h  Makefile  README.md  User.cpp  User.h  cmake_install.cmake  lrs
Main/: Library.cpp
Main/model/: Book.cpp  Book.h  Library.h  User.cpp  User.h  main.cpp
include/: Book.h  Library.h  User.h
src/: Book.cpp  Library.cpp  User.cpp  helpers.cpp  main.cpp
tests/: BookTest.cpp  LibraryTest.cpp  UserTest.cpp
